--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,19 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+
+    <color name="colorPrimary">#0b6156</color>
+    <color name="colorPrimaryDark">#095049</color>
+    <color name="colorAccent">#03DAC5</color>
+
     <color name="white">#FFFFFFFF</color>
+    <color name="lightGrey">#EDEDED</color>
+    <color name="red">#9F0B0B</color>
+    <color name="statusBackground">#009688</color>
+    <color name="chatBackground">#8BC34A</color>
+    <color name="fbColor">#3c5793</color>
+
+    <color name="black">#FF000000</color>
+    <color name="lightGreen">#e5ffcc</color>
+
 </resources>
