--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -114,6 +114,7 @@
                 />
         </LinearLayout>
         <TextView
+            android:visibility="gone"
             android:id="@+id/SignUpPhoneTvSU"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
